# seg_lib

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: deploy.yml  verify.yml
.verify-helper/: timestamps.remote.json
book/: book.toml
book/src/: SUMMARY.md  predefined_ops.md  reference.md
book/src/algebra/: introduction.md  monoid.md  monoid_action.md
book/src/dynamic/: dynamic.md
book/src/implementation/: range.md  size.md  summary.md
book/src/segment_tree/: binary_serach.md  (+1 more)
doc/: dyn_new.md  dyn_with_capacity.org  new.md  new.org  point_query.org  point_update.md  range_query.md  range_query.org  range_update.md  range_update.org
examples/: assign_range_set_range_composit.rs  dual-range_affine_point_get.rs  dynamic-point_set_range_composite_large_array.rs  dynamic_lazy-range_affine_range_sum_large_array.rs  dynamic_lazy.rs  ex_assign.rs  ex_dual.rs  ex_dynamic.rs  ex_dynamic_lazy.rs  ex_lazy.rs  ex_segment_tree.rs  lazy-range_affine_range_sum.rs  library_checker_dual.rs  library_checker_dynamic.rs  library_checker_dynamic_lazy.rs  library_checker_lazy.rs  normal-point_set_range_composite.rs  normal.rs  segment_tree.rs
src/: acts.rs  assign.rs  beats.rs  dual.rs  dynamic.rs  dynamic_lazy.rs  lazy.rs  lib.rs  normal.rs  traits.rs  utility.rs
src/ops/: add.rs  affine.rs  assign.rs  assign_or.rs  bit_and.rs  bit_or.rs  bit_xor.rs  gcd.rs  lcm.rs  max.rs  min.rs  mod.rs  mul.rs
src/provider/: add.rs  affine.rs  assign.rs  assign_or.rs  bit_and.rs  bit_or.rs  bit_xor.rs  gcd.rs  lcm.rs  max.rs  min.rs  mod.rs  mul.rs
tests/: normal.rs
(+3 files in other folders)
