[package]
name = "seg_lib"
version = "0.1.0"
edition = "2024"
description = "collection of segment tree variants"
readme = "README.md"
repository = "https://github.com/qdot3/seg_lib"
license = "MIT OR Apache-2.0"

[dependencies]
num-integer = "0.1.46"
num-traits = "0.2.19"

[dev-dependencies]
proconio = { version = "0.5.0", features = ["derive"] }
rand = "0.9.2"
